Implemented code splitting

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-  "plugins": ["transform-react-jsx"],
+  "plugins": [
+    "transform-react-jsx"
+  ],
   "env": {
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
