--- a/package.json
+++ b/package.json
@@ -3,23 +3,26 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "predeploy": "webpack -p --config=webpack/webpack.prod.js",
-    "deploy": "surge --project dist --domain https://aletta.surge.sh",
+    "build": "webpack -p --config=webpack/webpack.prod.js",
     "start": "webpack-dashboard -- webpack-dev-server --config=webpack/webpack.dev.js",
     "test": "jest"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-dynamic-import-node": "^1.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.4.5",
     "extract-text-webpack-plugin": "2.0.0-rc.2",
     "html-webpack-plugin": "^2.28.0",
     "identity-obj-proxy": "^3.0.0",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "jest": "^18.1.0",
     "normalize.css": "^5.0.0",
     "offline-plugin": "^4.6.1",
@@ -32,6 +35,7 @@
     "react-router-dom": "next",
     "standard": "^8.6.0",
     "standard-loader": "^5.0.0",
+    "style-ext-html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.13.1",
     "surge": "^0.18.0",
     "webpack": "2.2.1",
